# storagevec-rs

./: Cargo.toml  README.md  azure-pipelines.yml
src/: lib.rs  smap.rs  svec.rs
