[package]
name = "storagevec"
version = "0.2.2"
authors = ["notgull <jtnunley01@gmail.com>"]
edition = "2018"
description = "Feature-gated heap-based/stack-based map and vector structures."
license = "MIT OR Apache-2.0"
homepage = "https://github.com/notgull/storagevec-rs#readme"
repository = "https://github.com/notgull/storagevec-rs"

[dependencies]
hashbrown = { version = "0.8.2", optional = true }
tinymap = "0.2.4"
tinyvec = { version = "1.0.0", features = ["nightly_const_generics"] }

[features]
default = ["alloc"]
alloc = ["hashbrown"]
stack = ["tinyvec/alloc"]
